--- a/react-graphql-basic/server/package.json
+++ b/react-graphql-basic/server/package.json
@@ -18,11 +18,15 @@
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "graphql": "^15.3.0",
+    "lodash": "^4.17.20",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-arrow-functions": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
+    "babel-plugin-lodash": "^3.3.4",
+    "cz-conventional-changelog": "3.3.0",
     "nodemon": "^2.0.6",
     "rimraf": "^3.0.2"
   },
@@ -32,5 +36,10 @@
       "*.test.js",
       "*.spec.js"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
