--- a/react-graphql-basic/server/.babelrc
+++ b/react-graphql-basic/server/.babelrc
@@ -1,4 +1,13 @@
 {
-  "presets": ["@babel/preset-env"],
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "useBuiltIns": "usage",
+        "shippedProposals": true,
+        "corejs": { "version": 3, "proposals": true }
+      }
+    ]
+  ],
   "plugins": ["lodash", "@babel/plugin-transform-arrow-functions"]
 }
