--- a/react-graphql-basic/server/.gitignore
+++ b/react-graphql-basic/server/.gitignore
@@ -1,3 +1,6 @@
+docker-compose.yaml
+Dockerfile
+.dockerignore
 # Logs
 logs
 *.log
@@ -8,7 +11,7 @@ lerna-debug.log*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-
+rundocker.txt
 # Runtime data
 pids
 *.pid
