--- a/react-graphql-basic/server/package.json
+++ b/react-graphql-basic/server/package.json
@@ -14,12 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "@babel/register": "^7.12.1",
+    "core-js": "3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "graphql": "^15.3.0",
     "lodash": "^4.17.20",
-    "morgan": "^1.10.0"
+    "mongoose": "^5.10.9",
+    "morgan": "^1.10.0",
+    "redis": "^3.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -41,5 +45,6 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
-  }
+  },
+  "browserslist": "> 0.25%, not dead"
 }
