--- a/react-graphql-basic/web-spa/package.json
+++ b/react-graphql-basic/web-spa/package.json
@@ -2,6 +2,7 @@
   "name": "web-spa",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4000/",
   "dependencies": {
     "@apollo/client": "^3.2.5",
     "@testing-library/jest-dom": "^4.2.4",
