--- a/muhi-cli/package.json
+++ b/muhi-cli/package.json
@@ -1,12 +1,54 @@
 {
   "name": "muhi-cli",
   "version": "1.0.0",
-  "description": "```",
-  "main": "index.js",
+  "description": "Command Line Repo react-learn-practice ",
+  "main": "dist/index.js",
+  "bin": {
+    "muhi-cli": "dist/index.js"
+  },
+  "files": [
+    "dist/",
+    "LICENSE",
+    "README.MD"
+  ],
+  "type": "commonjs",
+  "exports": {
+    ".": "./dist/index.js",
+    "./package": "./package.json",
+    "./package.json": "./package.json"
+  },
+  "engines": {
+    "node": ">=10"
+  },
   "scripts": {
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts",
+    "build": "tsc --build tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "keywords": [
+    "muhi-cli"
+  ],
+  "author": "Muhamad Imron",
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.21.0",
+    "chalk": "^4.1.0",
+    "inquirer": "^7.3.3"
+  },
+  "devDependencies": {
+    "@types/inquirer": "^7.3.1",
+    "@types/node": "^14.14.5",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.5"
+  },
+  "bundleDependencies": false,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/muhimron90/react-learn-pratice.git"
+  },
+  "bugs": {
+    "url": "https://github.com/muhimron90/react-learn-pratice/issues"
+  },
+  "homepage": "https://github.com/muhimron90/react-learn-pratice.git"
 }
