--- a/muhi-cli/package.json
+++ b/muhi-cli/package.json
@@ -29,15 +29,17 @@
     "muhi-cli"
   ],
   "author": "Muhamad Imron",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.21.0",
     "chalk": "^4.1.0",
-    "inquirer": "^7.3.3"
+    "inquirer": "^7.3.3",
+    "shelljs": "^0.8.4"
   },
   "devDependencies": {
     "@types/inquirer": "^7.3.1",
     "@types/node": "^14.14.5",
+    "@types/shelljs": "^0.8.8",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   },
