--- a/muhi-cli/package.json
+++ b/muhi-cli/package.json
@@ -1,18 +1,19 @@
 {
   "name": "muhi-cli",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Command Line Repo react-learn-practice ",
-  "main": "dist/index.js",
+  "main": "dist/cli.js",
   "bin": {
-    "muhi-cli": "dist/index.js"
+    "muhi-cli": "dist/cli.js"
   },
   "files": [
     "dist/",
     "LICENSE",
     "README.MD"
   ],
+  "type": "commonjs",
   "exports": {
-    ".": "./dist/index.js",
+    ".": "./dist/cli.js",
     "./package": "./package.json",
     "./package.json": "./package.json"
   },
@@ -20,7 +21,7 @@
     "node": ">=10"
   },
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node dist/cli.js",
     "dev": "ts-node src/index.ts",
     "build": "tsc --build tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -43,7 +44,6 @@
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   },
-  "bundleDependencies": false,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/muhimron90/react-learn-pratice.git"
