--- a/react-graphql-basic/package.json
+++ b/react-graphql-basic/package.json
@@ -4,7 +4,7 @@
   "description": "react express grapql mongodb stacks",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently --kill-others-on-fail \"yarn client\" \"yarn server\" ",
+    "start": "concurrently --kill-others-on-fail \"yarn client\" \"yarn server\" --unhandled-rejections=strict ",
     "client": "cd web-spa && yarn start",
     "server": "cd server && yarn dev",
     "dir-client": "cd web-spa && yarn ",
